# Bakery-Management-Simulation

./: .gitignore  CMakeLists.txt  README.md  config.json  config.txt  queue_test.c
.github/workflows/: cmake-single-platform.yml  cmake-single-platform_ss.yml
assets/: backgroundnew.png:Zone.Identifier  d29c6623-cfd1-41e4-af0f-c3ca0d2411e9.png:Zone.Identifier
cmake/: FindJSON-C.cmake
include/: BakerTeam.h  BakeryItem.h  BakeryQueue.h  assets.h  bakery_message.h  bakery_utils.h  bakeryteam.h  chef.h  config.h  customer.h  customer_utils.h  game.h  info.h  inventory.h  oven.h  products.h  random.h  seller.h  semaphores_utils.h  shared_mem_utils.h  supply_chain.h  team.h
include/lib/queue/: queue.h
src/: game.c  inventory.c  main.c  team.c
src/bakers/: BakerTeam.c  BakeryItem.c  BakeryQueue.c  baker.c  baker_teams.c  baker_utils.c  baker_worker.c  oven.c  team_bread.c  team_cakesweets.c  team_patisseries.c
src/chefs/: chef.c  chef_menu.c  chef_teams.c  chef_utils.c  chef_worker.c
src/customers/: customer.c  customerManager.c  customer_manager.c  customer_utils.c
src/graphics/: animation.c  animation.h  assets.c  graphics.c  graphics1.c  main.c
src/sellers/: seller.c  seller_utils.c
src/supply_chains/: supply_chain.c  supply_chain_functions.c  supply_chain_manager.c
src/utils/: config.c  json-config.c  message_queue_utils.c  products_utils.c  random_baker.c  semaphores_utils.c  shared_mem_utils.c
tests/: CMakeLists.txt  alarm_mq.c  baker_integration_test.c  chef-supply-chain-test.c  inventory-semaphore-test.c  json_test.c  queue_test.c  test-shm.c  test_customer.c  test_products.json  test_queue_removal.c
